@@ -1,5 +1,7 @@
 Dec 02 2002  2.7.1  Tweaked how frontend handles group naming to be faster
                      and to handle changing SSID's gracefully.
+                    Changed configfile parser to allow multiple options of the
+                     same type.
 Dec 01 2002  2.7.1  Internal modifications to the frontend power display
                     Tweaked byte count details
                     Updated turbocell code
